# InvestmentsApp

./: .env.example  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: build-deploy.yml
alembic/: env.py
alembic/versions/: 0ce2a4f84482_add_tables_from_sqlalchemy_models.py  12b13e613504_alembic_create_post_table.py  8b291922b692_phone_number_added_in_user_table.py
app/: calculations.py  main.py  oauth2.py  schemas.py
app/config/: config.py  database.py  orm_database.py  orm_models.py  repositories.py
app/controllers/: investment.py  user.py
app/interfaces/: investment_interface.py  user.py
app/routers/: auth.py  investment.py  stock_investment.py  user.py  vote.py
app/services/: investment.py  user.py
tests/: conftest.py  database.py  pytest_info.txt  test_calculations.py  test_stock_investment.py  test_users.py
