[tool.poetry]
name = "app"
version = "0.1.0"
description = "investment application for portfolio management"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
anyio = "3.6.2"
bcrypt = "4.0.1"
certifi = "2022.9.24"
cffi = "1.15.1"
charset-normalizer = "2.1.1"
click = "8.1.3"
colorama = "0.4.6"
cryptography = "38.0.4"
dnspython = "2.2.1"
ecdsa = "0.18.0"
email-validator = "1.3.0"
fastapi = "0.85.2"
h11 = "0.14.0"
httptools = "0.5.0"
idna = "3.4"
itsdangerous = "2.1.2"
jinja2 = "3.1.2"
markupsafe = "2.1.1"
orjson = "3.8.1"
passlib = "1.7.4"
psycopg2 = "2.9.5"
pyasn1 = "0.4.8"
pycparser = "2.21"
pydantic = "1.10.2"
python-dotenv = "0.21.0"
python-jose = "3.3.0"
python-multipart = "0.0.5"
pyyaml = "6.0"
requests = "2.28.1"
rsa = "4.9"
six = "1.16.0"
sniffio = "1.3.0"
starlette = "0.20.4"
typing-extensions = "^4.6.0"
ujson = "5.5.0"
urllib3 = "1.26.12"
uvicorn = "0.18.3"
watchfiles = "0.18.0"
websockets = "10.4"
sqlalchemy = "^2.0.31"


[tool.poetry.group.dev.dependencies]
anyio = "3.6.2"
bcrypt = "4.0.1"
certifi = "2022.9.24"
cffi = "1.15.1"
charset-normalizer = "2.1.1"
click = "8.1.3"
colorama = "0.4.6"
cryptography = "38.0.4"
dnspython = "2.2.1"
ecdsa = "0.18.0"
email-validator = "1.3.0"
fastapi = "0.85.2"
h11 = "0.14.0"
httptools = "0.5.0"
idna = "3.4"
itsdangerous = "2.1.2"
jinja2 = "3.1.2"
markupsafe = "2.1.1"
orjson = "3.8.1"
passlib = "1.7.4"
psycopg2 = "2.9.5"
pyasn1 = "0.4.8"
pycparser = "2.21"
pydantic = "1.10.2"
python-dotenv = "0.21.0"
python-jose = "3.3.0"
python-multipart = "0.0.5"
pyyaml = "6.0"
requests = "2.28.1"
rsa = "4.9"
six = "1.16.0"
sniffio = "1.3.0"
starlette = "0.20.4"
typing-extensions = "4.6.0"
ujson = "5.5.0"
urllib3 = "1.26.12"
uvicorn = "0.18.3"
watchfiles = "0.18.0"
websockets = "10.4"
sqlalchemy = "^2.0.31"
pytest = "^8.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
